# stsci.image

./: .gitignore  defsetup.py  new_setup.cfg  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  publish-to-pypi.yml
docs/source/: conf.py  image.rst  index.rst  numcombine.rst
lib/: __init__.py  _image.py  combine.py
lib/stsci/: __init__.py
lib/stsci/image/: __init__.py  _image.py  blkavg.py  blkrep.py
lib/stsci/image/test/: test_average.py  test_blkavg.py  test_blkrep.py  testutil.py
src/: _combinemodule.c
stsci/: __init__.py
stsci/image/: __init__.py  _image.py  combine.py  numcombine.py
stsci/image/test/: test_average.py  test_blkavg.py  test_median.py  test_minimum.py  test_threshold.py
stsci/image/test/data/: j8ux08ceq_flt.fits.REMOVED.git-id
test/: test_average.py
tests/: test_average.py  test_median.py  test_minimum.py  test_threshold.py
