[metadata]
name = stsci.image
version = 2.0
author = Todd Miller
author-email = help@stsci.edu
summary = Image array manipulation functions
home-page = http://www.stsci.edu/resources/software_hardware/stsci_python 
classifier =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules
requires-python = >=2.5
requires-dist = 
    stsci.tools (==2.9)
    stsci.convolve (==2.0)
    numpy (>=1.5.1)

[files]
packages_root = lib
packages =
    stsci
    stsci.image
    stsci.image.test

[extension=stsci.image._combine]
sources = src/_combinemodule.c
define_macros =
    NUMPY = 1
include_dirs = numpy

[build_ext]
pre-hook.numpy-extension-hook = stsci.distutils.hooks.numpy_extension_hook

[global]
commands = stsci.distutils.command.easier_install.easier_install

[sdist]
pre-hook.svn-info = stsci.distutils.hooks.svn_info_pre_hook
post-hook.svn-info = stsci.distutils.hooks.svn_info_post_hook

[build_py]
pre-hook.svn-info = stsci.distutils.hooks.svn_info_pre_hook
post-hook.svn-info = stsci.distutils.hooks.svn_info_post_hook

[easy_install]
find-links = ..
