[metadata]
name = stsci.image
version = 2.3.0
author = Todd Miller
author-email = help@stsci.edu
summary = Image array manipulation functions
description = Formerly included in SciPy as scipy.stsci.image
home-page = http://www.stsci.edu/resources/software_hardware/stsci_python
classifier =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules
requires-python = >=2.5
requires-dist =
    numpy
    scipy

[files]
packages =
    stsci
    stsci.image

[extension=stsci.image._combine]
sources = src/_combinemodule.c
define_macros =
    NUMPY = 1
include_dirs = numpy

[build_ext]
pre-hook.numpy-extension-hook = stsci.distutils.hooks.numpy_extension_hook

[global]
setup_hooks =
    stsci.distutils.hooks.use_packages_root
    stsci.distutils.hooks.tag_svn_revision
    stsci.distutils.hooks.version_setup_hook

